tests/compiler/function/example/unknown_field.stderr
error: no rules expected identifier `unknown_field`
 --> tests/compiler/function/example/unknown_field.rs:4:15
  |
4 |       let _ex = example! {
  |  _______________^
5 | |         title: "test",
6 | |         source: "code",
7 | |         result: Ok("output"),
8 | |         unknown_field: "value",
9 | |     };
  | |_____^ no rules expected this token in macro call
  |
note: while trying to match `title`
 --> src/compiler/function.rs
  |
  |     (@internal [$title:expr] [$($source:tt)*] [$($result:tt)*] [title: $t:expr, $($rest:tt)*]) => {
  |                                                                 ^^^^^
  = note: this error originates in the macro `example` (in Nightly builds, run with -Z macro-backtrace for more info)
